Bug 319885 - GlobalPresenceChooser broken with right to left languages
Summary: GlobalPresenceChooser broken with right to left languages
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-05-15 21:34 UTC by David Edmundson
Modified: 2014-03-12 14:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-05-15 21:34:58 UTC
Run "ktp-contactlist -reverse"

Edit button now overlaps text
Comment 1 Martin Klapetek 2013-05-15 22:01:11 UTC
To fix this bug we need to check if we're running RTL environment and position the edit button relatively to the left side instead of the right side.

Same goes for the 'connecting' spinner.
Comment 2 David Edmundson 2013-05-15 22:04:43 UTC
see QApplication::layoutDirection

We can also use QStyle::visualRect which will convert logical co-ordinates into the correct visual co-ordinates for a left to right or right to left setup automatically.
Comment 3 mayank 2014-03-04 21:04:28 UTC
this fixes it https://git.reviewboard.kde.org/r/116601/
Comment 4 David Edmundson 2014-03-12 14:18:41 UTC
Git commit 55ee19c98ff9b03bc168441b0b7790e74e1d1d53 by David Edmundson, on behalf of mayank jha.
Committed on 12/03/2014 at 14:18.
Pushed by davidedmundson into branch 'kde-telepathy-0.8'.

fixes the right to left position for global presence chooser widget edit button.

As the values were hardcoded, so the changes were not reflected upon applying layout. Had to give the value for right to left.

REVIEW: 116601
FIXED-IN: 0.8.1

M  +14   -6    global-presence-chooser.cpp

http://commits.kde.org/telepathy-contact-list/55ee19c98ff9b03bc168441b0b7790e74e1d1d53