fixes the right to left position for global presence chooser widget edit button.

As the values were hardcoded, so the changes were not reflected upon applying layout. Had to give the value for right to left.

REVIEW: 116601
BUG: 319885
FIXED-IN: 0.8.1